--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="author" content="i.erzen">
   <meta name="robots" content="index, nofollow">
   <title>Formulaire de Contact</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
