--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="columns">
 	      <!-- Colonne de gauche : texte et métadonnées -->
       <div class="left-column">
-        <h1><img src="images/typo-form-contact.png" style="width:40%"></h1>
+        <h1><img src="typo-form-contact.png" style="width:40%"></h1>
         <p>Si vous avez des questions ou des commentaires.</p>
         <p>Utilisez ce formulaire pour nous contacter.</p>
         <br> <br />
